force-app/main/default/objects/List_Filter__c/List_Filter__c.object-meta.xml
<CustomObject>
    <label>List Filter</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>