force-app/main/default/objects/List_Filter__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>This filed is used for to add conditions, i.e Name = &apos;Any&apos; AND Email = &apos;con@te.com&apos;</description>
    <label>Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>