force-app/main/default/objects/List_Filter__c/fields/Condition_JSON__c.field-meta.xml
<CustomField>
    <fullName>Condition_JSON__c</fullName>
    <label>Condition JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>