force-app/main/default/objects/List_Filter__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this checked, then this filter shows as public</inlineHelpText>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>