force-app/main/default/objects/List_Filter__c/fields/Screen_Name__c.field-meta.xml
<CustomField>
    <fullName>Screen_Name__c</fullName>
    <description>This fields is used for to identify component screen</description>
    <label>Screen Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>